--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "emoji-picker-react": "^4.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dom-camera": "^0.3.5",
     "react-icon": "^1.0.0",
     "react-icons": "^5.2.1",
+    "react-webcam": "^7.2.0",
     "sass": "^1.77.5"
   },
   "devDependencies": {
