--- a/package.json
+++ b/package.json
@@ -10,15 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.20",
+    "@mui/material": "^5.15.20",
     "clsx": "^2.1.1",
     "emoji-picker-react": "^4.10.0",
+    "firebase": "^10.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dom-camera": "^0.3.5",
+    "react-hook-form": "^7.52.0",
     "react-icon": "^1.0.0",
     "react-icons": "^5.2.1",
     "react-webcam": "^7.2.0",
-    "sass": "^1.77.5"
+    "sass": "^1.77.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
