--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.52.0",
     "react-icon": "^1.0.0",
     "react-icons": "^5.2.1",
+    "react-router-dom": "^6.23.1",
     "react-webcam": "^7.2.0",
     "sass": "^1.77.5",
     "zod": "^3.23.8"
