--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@hookform/resolvers": "^3.6.0",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "clsx": "^2.1.1",
@@ -24,6 +25,7 @@
     "react-icon": "^1.0.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
+    "react-toastify": "^10.0.5",
     "react-webcam": "^7.2.0",
     "sass": "^1.77.5",
     "zod": "^3.23.8"
