--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-toastify": "^10.0.5",
     "react-webcam": "^7.2.0",
     "sass": "^1.77.5",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
