--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dom-camera": "^0.3.5",
+    "react-draggable": "^4.4.6",
     "react-hook-form": "^7.52.0",
     "react-icon": "^1.0.0",
     "react-icons": "^5.2.1",
